add swagger recovery and recovery update
