# src/docs/swagger-output.json
@@ -6,6 +6,14 @@
     "title": "Vitrine API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
+  "servers": [
+    {
+      "url": "http://localhost:3000/"
+    },
+    {
+      "url": "https://localhost:3000/"
+    }
+  ],
   "paths": {
     "/api/v1/user/login": {
       "post": {
@@ -1000,7 +1008,43 @@
     },
     "/api/v1/auth/recovery": {
       "post": {
-        "description": "",
+        "tags": [
+          "Auth"
+        ],
+        "description": "Endpoint to request authentication token",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Auth Request information.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "type": "string",
+                  "example": "1286"
+                },
+                "document": {
+                  "type": "string",
+                  "example": "43100360826"
+                },
+                "birthday": {
+                  "type": "string",
+                  "example": "1993-02-11T00:00:00"
+                },
+                "name": {
+                  "type": "string",
+                  "example": "MAYARA REGINA SILVEIRA GOIS"
+                },
+                "motherName": {
+                  "type": "string",
+                  "example": "MARIA AMELIA DA SILVEIRA GOIS"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "400": {
             "description": "Invalid parameters",
@@ -1041,7 +1085,7 @@
         }
       }
     },
-    "/api/v1/auth/update": {
+    "/api/v1/auth/recovery/update": {
       "post": {
         "description": "",
         "responses": {
